statuses-experimentation/01-gateway-listener-unsupported-route-kind.yml
---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: my-gateway-listener-unsupported-route-kind
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners:
    - protocol: HTTP
      port: 8000
      routes:
        kind: PRoute
        namespaces:
          from: Same
        selector:
          matchLabels:
            app: foo
