statuses-experimentation/01-gateway-unkown-httproute.yml
---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: my-unknown-httproutes
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners:
    - protocol: HTTP
      port: 8000
      routes:
        kind: HTTPRoute
        namespaces:
          from: Same
        selector:
          matchLabels:
            app: unknown
